--- a/cp2-frontend/index.html
+++ b/cp2-frontend/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./src/assets/logoNinja.png" type="image/x-icon">
+    <title>Iki No Modan</title>
+    
 </head>
 <body>
     <header>
