--- a/cp2-frontEnd/cp2-frontend/pages/cardapio.html
+++ b/cp2-frontEnd/cp2-frontend/pages/cardapio.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Iki No Modan - Cardápio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+  <div class="top-bar">Iki No Modan</div>
+  <div class="hero">Cardápio</div>
+
+  <div class="menu-section">
+    <img src="logo.png" alt="Logo Iki No Modan" style="width: 120px; margin: 0 auto 20px; display: block;">
+    <h1>IKI NO MODAN</h1>
+    <h2>MENU COMPLETO</h2>
+
+    <div class="section-title">OPÇÕES DE RODÍZIO</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Expresso</span><span>R$ 89,00</span></div>
+      <div class="menu-item"><span>Especial</span><span>R$ 109,00</span></div>
+      <div class="menu-item"><span>Executivo</span><span>R$ 129,00</span></div>
+    </div>
+
+    <div class="section-title">ENTRADAS</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Edamame temperado</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Sunomono de pepino</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Missoshiru (sopa de missô)</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Gyoza (4 unidades)</span><span>R$ 16,00</span></div>
+      <div class="menu-item"><span>Shimeji na manteiga</span><span>R$ 22,00</span></div>
+      <div class="menu-item"><span>Hurumaki (rolinho primavera)</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Guioza de legumes (4 unid.)</span><span>R$ 16,00</span></div>
+      <div class="menu-item"><span>Guioza vegano (4 unid.)</span><span>R$ 16,00</span></div>
+    </div>
+
+    <div class="section-title">PRATOS QUENTES</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Yakisoba tradicional</span><span>R$ 36,00</span></div>
+      <div class="menu-item"><span>Yakisoba frango</span><span>R$ 39,00</span></div>
+      <div class="menu-item"><span>Yakisoba carne</span><span>R$ 42,00</span></div>
+      <div class="menu-item"><span>Arroz gohan</span><span>R$ 8,00</span></div>
+      <div class="menu-item"><span>Arroz com shimeji</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Teppan de salmão</span><span>R$ 48,00</span></div>
+      <div class="menu-item"><span>Teppan de filé mignon</span><span>R$ 52,00</span></div>
+      <div class="menu-item"><span>Teppan de frango (grelhado)</span><span>R$ 42,00</span></div>
+    </div>
+
+    <div class="section-title">SUSHI & SASHIMI</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Sashimi (6 fatias)</span><span>R$ 34,00</span></div>
+      <div class="menu-item"><span>Nigiri (duplas)</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Hossomaki (8 unidades)</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Uramaki (8 unidades)</span><span>R$ 26,00</span></div>
+      <div class="menu-item"><span>Jow de salmão (4 unidades)</span><span>R$ 28,00</span></div>
+      <div class="menu-item"><span>Jow de atum (4 unidades)</span><span>R$ 34,00</span></div>
+      <div class="menu-item"><span>Jow de vieira (4 unidades)</span><span>R$ 42,00</span></div>
+      <div class="menu-item"><span>Temaki (salmão, atum ou skin)</span><span>R$ 28,00</span></div>
+    </div>
+
+    <div class="section-title">BEBIDAS</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Refrigerante</span><span>R$ 8,00</span></div>
+      <div class="menu-item"><span>Sakê nacional</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Sakê importado</span><span>R$ 26,00</span></div>
+      <div class="menu-item"><span>Cerveja (long neck)</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Caipirinha (frutas)</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Caipirinha (sakê)</span><span>R$ 22,00</span></div>
+      <div class="menu-item"><span>Água sem gás</span><span>R$ 6,00</span></div>
+      <div class="menu-item"><span>Água com gás</span><span>R$ 7,00</span></div>
+    </div>
+
+    <div class="section-title">SOBREMESAS</div>
+    <div class="menu-grid">
+      <div class="menu-item"><span>Harumaki de chocolate</span><span>R$ 18,00</span></div>
+      <div class="menu-item"><span>Sorvete de matchá</span><span>R$ 16,00</span></div>
+      <div class="menu-item"><span>Petit Gateau com sorvete</span><span>R$ 24,00</span></div>
+      <div class="menu-item"><span>Frutas da estação</span><span>R$ 12,00</span></div>
+      <div class="menu-item"><span>Mochi (unidade)</span><span>R$ 12,00</span></div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p>WhatsApp: (11) 98234-9851 | iki-no-modan@email.com | @ikinomodanjp</p>
+  </div>
+
+  <a href="https://wa.me/5511982349851" target="_blank" class="whatsapp-button">
+    <img src="https://cdn.jsdelivr.net/gh/rafaelbotazini/floating-whatsapp-button/whatsapp.svg" alt="Fale conosco no WhatsApp" />
+  </a>
 </body>
 </html>
